<package>
  <name>pcl_ros_conversion_benchmark</name>
  <version>0.0.0</version>
  <description>
    benchmark of conversion between PCL and ROS
  </description>
  
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  
</package>
